# my_playground

./: .gitignore  .vimrc  DevOpsWorkGround.md  Linux_commands.md  README.md  classes.py  database_script.sql  django-setup.md  functions.py  git_commands
C/binary_search/: main  main.cpp
C/print_time/: CMakeLists.txt  main.c
C_cpp/comparator/: main.cpp
Git foo/: GitHubActions.md  git_commands  git_commands.md
cmake-tutorial/: CMAKE TUTORIAL.docx  README.md  ~$AKE TUTORIAL.docx
cmake-tutorial/cmake_examples/example 1/: CMakeLists.txt  main.cpp
cmake-tutorial/cmake_examples/example 2/: CMakeLists.txt  TutorialConfig.h.in  square_root.cpp
cmake-tutorial/cmake_examples/example 2/MathFunctions/: CMakeLists.txt  mysqrt.cxx
django/: django-setup.md  django-setup.txt
docker-tutorial/: Docker tutorial.docx
flask_first_webapp/: app.py  notes -flask.txt
flask_first_webapp/templates/: first_page.html  hello.html  index.html  layout.html  notes.html  second_page.html
html_tests/chartjs/: example2.html  index.html
javascript/: nodejs_notes  test.html  test_jquery.js  test_js.js
mariadb/: MDEV-24602 - column constraints  README.md  example_join.sql
mariadb/Bugs/: MDEV-15530-replicate_rewrite_db.md  MDEV-21322: report slave progress to the master.md  blogs  connect use debug in mtr to get stack trace.md  debug_info_backtrace_PR.md  mariadb_upgrade_verbose.md  mysqlbinlog raw format and flasback format in conjuction  semisync_how_works.md  usage_of_anonym_include_files.md  working_with_events.md
mariadb/Bugs_Blogs_Notes/: Cmake_workspace.md  Connect_SE_and_JDBC.md  Debug_check_constraint.md  MDEV-14448 : ctrl-c.md  MDEV-19629 - sys schema functions_MySQL compatiblity.md  MDEV-23802: Add a new command line option to mysqlbinlog.md  MDEV-24598 - duplicate check constraint name.md  MDEV-26231 - mysql_upgrade attempts to remove plugins which it failed to install.md  MDEV-26231:mysql_upgrade attempts to remove plugins which it failed to install.md  MDEV-28367-BACKUP_LOCKS on table.md  MDEV-30432 - Remove cpprestsdk from connect.md  MDEV-30543 - status variable max_used_connections_time.md  MDEV-32004_bugs.md  (+35 more)
mojezagadjenje/: db.sqlite3  manage.py  scrap_data.py
nginx_workspace/: 10_dynamic_modules_nginx.conf  12_Expires-headers_nginx.conf  13_Compressed-responses-gzip_nginx.conf  14_Fastcgi_micro_cache_nginx.conf  15_HTTP2_SSL_nginx.conf  16_server_push_nghttp_nginx.conf  17_TLS_server_token_ssl_session_nginx.conf  18_rate_limiting_nginx.conf  19_basic_auth_nginx.conf  20_xframeoptions_xss_protection_nginx.conf  21_letsencrypt_nginx.conf  3_variables_nginx.conf  4_rewrite_redirect_nginx.conf  5_try_files_nginx.conf  6_access_error_logs_nginx.conf  8_php_processing_nginx.conf  9_worker_processes__nginx.conf  Nginx notes.docx  X-frame-options.html  location_context_nginx_2.conf  my_first_nginx.conf
programming/: 1.cc  using_fstat.cpp
readline_test/: a.out  makefile  notes  read  readline_anel.c
uwsgi-files/: test.ini  test.ini.save  tscze.ini
wsgi_module_notes/: my_notes_mod_wsgi_apache.txt
(+161 files in other folders)
